tests/error/errors_on_usage/else_expr_not_defined.err
Error: Variable not defined (at $FILE:7:11)
  | 
5 | def foo(x: bool) -> int:
6 |     (y := 1) if x else (z := 2)
7 |     return z
  |            ^ `z` might be undefined ...
  | 
6 |     (y := 1) if x else (z := 2)
  |                 - ... if this expression is `True`

Guppy compilation failed due to 1 previous error
